2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Cosmetics.

2003-11-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* system.h: Remove USE_INLINES.
	* chain.c: Remove USE_INLINES.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Require automake-1.5.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.