@@ -1,18 +1,0 @@
-/*
- *  COPYRIGHT (c) 1988-2002.
- *  On-Line Applications Research Corporation (OAR).
- *  All rights reserved.
- *
- *  $Id$
- */
-
-
-#ifndef __ISR_h
-#define __ISR_h
-
-typedef unsigned32 ISR_Level;
-
-#define _ISR_Disable
-#define _ISR_Enable
-
-#endif
