@@ -1,3 +1,12 @@
+2007-12-10	Ralf Corsepius <ralf.corsepius@rtems.org>
+
+	* address.h, address.inl, chain.c, chain.h, system.h:
+	Eliminate unsigned8, unsigned16, unsigned32. 
+	Use size_t, ptrdiff_t, intptr_t for 64bit compliance.
+	* chain.c: Reflect removal of isr.h.
+	* isr.h: Remove.
+	* Makefile.am: Remove isr.h.
+
 2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Cosmetics.
